<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="loginViewModel"
            type="com.hitachi.confirmnfc.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <LinearLayout
            android:id="@+id/loginPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/titleOrganizationCode"
                android:gravity="center"
                android:textSize="24sp"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:layout_marginBottom="40dp"/>

            <EditText
                android:id="@+id/organizationCodeInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input"
                android:hint="@string/titleOrganizationCode"
                android:inputType="text"
                android:padding="16dp"
                android:text="@={loginViewModel.organizationCode}" />

            <TextView
                android:id="@+id/loginMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@{loginViewModel.loginMessage}"
                android:textColor="@color/message_text"
                android:textSize="18sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:text="@string/strBtnLogin"
                android:layout_marginTop="30dp"
                android:paddingVertical="12dp"
                android:textColor="@color/button_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="@{!loginViewModel.phonePermissionDenied ? View.VISIBLE : View.GONE}"/>

            <Button
                android:id="@+id/settingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/button"
                android:text="@string/strBtnSetting"
                android:layout_marginTop="30dp"
                android:paddingVertical="12dp"
                android:textColor="@color/button_text"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="@{loginViewModel.phonePermissionDenied ? View.VISIBLE : View.GONE}"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
